k8s/backend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend
  namespace: shopmicro
  labels:
    app: backend
    tier: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend

  strategy:
    canary:
      stableService: backend
      canaryService: backend-canary
      trafficRouting:
        nginx:
          stableIngress: shopmicro-ingress-api
      steps:
        - setWeight: 20
        - pause: {duration: 2m}
        - analysis:
            templates:
            - templateName: backend-success-rate
        - setWeight: 100

  template:
    metadata:
      labels:
        app: backend
        tier: app
      # --- THE FIX: Tell Prometheus to scrape this pod! ---
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
      # ---------------------------------------------------
    spec:
      nodeSelector:
        role: app
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - backend
                topologyKey: kubernetes.io/hostname
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: backend
          image: ghcr.io/johnafariogun/shopmicro-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: 128Mi
            limits:
              cpu: "500m"
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: shopmicro
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: backend-canary
  namespace: shopmicro
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
