k8s/ingress.yaml
---
# 1. API and ML Ingress (WITH Rewrite annotations)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopmicro-ingress-api
  namespace: shopmicro
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: shopmicro.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /ml(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ml-service
                port:
                  number: 5000

---
# 2. Frontend Ingress (NO Rewrite annotations)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopmicro-ingress-frontend
  namespace: shopmicro
spec:
  ingressClassName: nginx
  rules:
    - host: shopmicro.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
